Error Mitigation/MagiCoder/Data/javax_imageio_spi/javax_imageio_spiOutputResult.txt
Sample: ImageInputStreamSpi_3
----------------------------------------------------------------
output:
./Data/javax_imageio_spi/javaFiles/ImageInputStreamSpi_3.java:5: error: <anonymous ImageInputStreamSpi_3$1> is not abstract and does not override abstract method createInputStreamInstance(Object,boolean,File) in ImageInputStreamSpi
        ImageInputStreamSpi spi = new ImageInputStreamSpi() {
                                                            ^
1 error


================================================================

Sample: ImageInputStreamSpi_4
----------------------------------------------------------------
output:
./Data/javax_imageio_spi/javaFiles/ImageInputStreamSpi_4.java:8: error: <anonymous ImageInputStreamSpi_4$1> is not abstract and does not override abstract method getDescription(Locale) in IIOServiceProvider
        ImageInputStreamSpi spi = new ImageInputStreamSpi() {
                                                            ^
./Data/javax_imageio_spi/javaFiles/ImageInputStreamSpi_4.java:9: error: method does not override or implement a method from a supertype
            @Override
            ^
./Data/javax_imageio_spi/javaFiles/ImageInputStreamSpi_4.java:24: error: method does not override or implement a method from a supertype
            @Override
            ^
3 errors


================================================================

Sample: ImageOutputStreamSpi_5
----------------------------------------------------------------
output:
./Data/javax_imageio_spi/javaFiles/ImageOutputStreamSpi_5.java:5: error: <anonymous ImageOutputStreamSpi_5$1> is not abstract and does not override abstract method createOutputStreamInstance(Object,boolean,File) in ImageOutputStreamSpi
        ImageOutputStreamSpi spi = new ImageOutputStreamSpi() {
                                                              ^
1 error


================================================================

Sample: ImageTranscoderSpi_1
----------------------------------------------------------------
output:
./Data/javax_imageio_spi/javaFiles/ImageTranscoderSpi_1.java:6: error: <anonymous ImageTranscoderSpi_1$1> is not abstract and does not override abstract method getWriterServiceProviderName() in ImageTranscoderSpi
        ImageTranscoderSpi spi = new ImageTranscoderSpi() {
                                                          ^
1 error


================================================================

Sample: ImageWriterSpi_4
----------------------------------------------------------------
output:
./Data/javax_imageio_spi/javaFiles/ImageWriterSpi_4.java:9: error: incompatible types: ImageWriter cannot be converted to ImageWriterSpi
            ImageWriterSpi writerSpi = ImageIO.getImageWritersBySuffix("jpg").next();
                                                                                  ^
1 error


================================================================

Sample: ServiceRegistry_4
----------------------------------------------------------------
output:
./Data/javax_imageio_spi/javaFiles/ServiceRegistry_4.java:5: error: constructor ServiceRegistry in class ServiceRegistry cannot be applied to given types;
        ServiceRegistry registry = new ServiceRegistry();
                                   ^
  required: Iterator<Class<?>>
  found:    no arguments
  reason: actual and formal argument lists differ in length
./Data/javax_imageio_spi/javaFiles/ServiceRegistry_4.java:7: error: cannot find symbol
        registry.add(provider);
                ^
  symbol:   method add(Object)
  location: variable registry of type ServiceRegistry
2 errors


================================================================

